@@ -1,4 +1,4 @@
-// Copyright 2018 Yahoo Holdings. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
+// Copyright Yahoo. Licensed under the terms of the Apache 2.0 license. See LICENSE in the project root.
 package com.yahoo.vespa.flags.json;
 
 import com.yahoo.vespa.flags.FetchVector;
@@ -6,7 +6,6 @@ import com.yahoo.vespa.flags.JsonNodeRawFlag;
 import com.yahoo.vespa.flags.RawFlag;
 import com.yahoo.vespa.flags.json.wire.WireRule;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -20,16 +19,30 @@ public class Rule {
     private final Optional<RawFlag> valueToApply;
 
     public Rule(Optional<RawFlag> valueToApply, Condition... andConditions) {
-        this(valueToApply, Arrays.asList(andConditions));
+        this(valueToApply, List.of(andConditions));
     }
 
     public Rule(Optional<RawFlag> valueToApply, List<Condition> andConditions) {
-        this.andConditions = andConditions;
+        this.andConditions = List.copyOf(andConditions);
         this.valueToApply = valueToApply;
     }
 
+    public List<Condition> conditions() {
+        return andConditions;
+    }
+
+    /** Returns true if all the conditions satisfy the given fetch vector */
     public boolean match(FetchVector fetchVector) {
         return andConditions.stream().allMatch(condition -> condition.test(fetchVector));
+    }
+
+    /**
+     * Returns true if all the conditions on dimensions set in the fetch vector are satisfied.
+     * Conditions on dimensions not specified in the given fetch vector are ignored.
+     */
+    public boolean partialMatch(FetchVector fetchVector) {
+        return andConditions.stream()
+                .allMatch(condition -> !fetchVector.hasDimension(condition.dimension()) || condition.test(fetchVector));
     }
 
     public Optional<RawFlag> getValueToApply() {
